<resources>
    <string name="app_name">FPTSocial</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>

    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>

    <string name="label_forget_pass">Forgot password</string>
    <string name="btn_register">Register</string>

    <string name="course">Course</string>
    <string name="full_name">Full Name</string>
    <string name="dob">Date of birth</string>
    <string name="dateofbirth">DOB</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="major">Major</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choseYourImage">Select your image</string>
    <string name="logout">Logout</string>

    <string name="title_newfeed">News</string>
    <string name="title_message">Chat</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>

    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="remember_me">Remember me</string>
    <string name="post_title">Title</string>
    <string name="post_content">Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="prev_page"><![CDATA[<]]></string>
    <string name="next_page"><![CDATA[>]]></string>
    <string name="message_send_reset_password_email_success">We have sent an mail to you. Check your email to reset your password</string>
    <string name="message_send_reset_password_email_failed">Not succesfuly! Check your email and try again!</string>
    <string name="add_image">Upload your image</string>
    <string name="label_notification">Notification</string>
    <string name="dont_have_account">You don\'t have account! Register now!</string>
    <string name="email_empty">Email must be not empty</string>
    <string name="email_not_verify">Email have not verify!</string>
    <string name="comment_is_blocked">This comment was blocked</string>
    <string name="write_comment">Write your comment</string>
    <string name="btn_post">Create</string>
    <string name="btn_save">Save</string>
    <string name="block_comment">Hide this comment</string>
    <string name="unlock_comment">Show this comment</string>
    <string name="delete_comment">Delete this comment</string>
    <string name="delete_comment_failed">Delete comment was not successful</string>
    <string name="notify_comment_your_post">commented on your status</string>
    <string name="this_content_not_existed">This content have not existed</string>
    <string name="btn_message">Message</string>
    <string name="permission_denied">You don\'t have permission</string>
    <string name="upload_image_post_failed">Upload your image failed, your post will not create</string>
    <string name="update_successfuly">Update successful</string>
    <string name="have_error">An error occurred! Please try again</string>
    <string name="deleted">Deleted</string>
    <string name="confirm_yes_no">Are you sure?</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="add_friend_complete">You have add him (her) to your list friend</string>
    <string name="delete_friend_complete">Cancel friend complete</string>
    <string name="must_input_text">You have to enter any text</string>
    <string name="post">Post</string>
    <string name="people">People</string>
    <string name="notify_like_your_post">like your status</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <!-- TODO: Remove or change this placeholder text -->
    >>>>>>> Stashed changes
</resources>