<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_action_art_track"
        android:title="@string/title_newfeed" />

    <item
        android:id="@+id/navigation_gifts"
        android:icon="@drawable/ic_action_message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_action_notifications_active"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/title_profile" />
</menu>