<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".gui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBarLoginLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="90dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@color/blackcolor"
                android:textSize="25dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/img">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_face_black_24dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/txtLoginEmail"
                android:layout_width="355dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn"
                android:elevation="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp" />

            <EditText
                android:id="@+id/txtLoginPassword"
                android:layout_width="355dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:elevation="5dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp" />


            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/remember_me" />

            <TextView
                android:id="@+id/labelLoginForgotPass"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="lableForgotPassClick"
                android:text="@string/label_forget_pass"
                android:textAlignment="textEnd"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="355dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/joinbtn"
                android:onClick="btnLoginOnClick"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@color/whitecolor" />

            <TextView
                android:id="@+id/labelLoginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:onClick="btnRegisterClick"
                android:text="@string/dont_have_account"
                android:textColor="@color/fullwhite" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>