<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gui.fragment.ProfileFragment">

        <!-- TODO: Update blank fragment layout -->


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".gui.ProfileActivity">

            <EditText
                android:id="@+id/etLastname"
                android:layout_width="243dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/blackcolor"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.61" />

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="232dp"
                android:layout_height="203dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/nam"
                tools:srcCompat="@drawable/nam" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/first_name"
                android:textColor="@color/blackcolor"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="23dp"
                android:layout_marginTop="48dp"
                android:text="@string/last_name"
                android:textColor="@color/blackcolor"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/etFirstname"
                android:layout_width="243dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/blackcolor"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.664" />

            <EditText
                android:id="@+id/etCourse"
                android:layout_width="131dp"
                android:layout_height="41dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="K?"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp"
                android:textColor="@color/blackcolor"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.428" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                android:text="@string/gender"
                android:textColor="@color/blackcolor"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:layout_marginTop="36dp"
                android:text="@string/course"
                android:textColor="@color/blackcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:layout_marginTop="48dp"
                android:text="@string/major"
                android:textColor="@color/blackcolor"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/etDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/dob"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/blackcolor"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:layout_marginTop="48dp"
                android:text="@string/dateofbirth"
                android:textColor="@color/blackcolor"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <Button
                android:id="@+id/btnProfileSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="save"
                android:text="@string/save"
                android:textColor="@color/blackcolor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/etDob" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:onClick="logout"
                android:text="@string/logout"
                android:textColor="@color/blackcolor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnProfileSave"
                app:layout_constraintTop_toBottomOf="@+id/etDob"
                app:layout_constraintVertical_bias="0.489" />

            <EditText
                android:id="@+id/edMajor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/major"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                android:textColor="@color/blackcolor" />

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>